new proj/src/objects/GE_ES_Deal_Management__c.object
<CustomObject>
    <fields>
        <fullName>AL_PC_Risk_Checklist_Affirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AL/PC Risk Checklist Affirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approvals_Submitted__c</fullName>
        <label>Approvals Submitted</label>
        <summaryFilterItems>
            <field>GE_ES_Risk_Checklist_Item__c.GE_ES_Approval_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>GE_ES_Risk_Checklist_Item__c.GE_OG_Risk_Module__c</field>
            <operation>notEqual</operation>
            <value>Pricing</value>
        </summaryFilterItems>
        <summaryForeignKey>GE_ES_Risk_Checklist_Item__c.GE_OG_GS_DealMngt__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GENUC_Sts__c</fullName>
        <formula>TEXT(GE_ES_Opportunity__r.GENUC_Sts__c)</formula>
        <label>Nuclear ComOps Status From</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_App_Conf_by_CD_CL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Confirmed by CD/CL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_Checklist_Status__c</fullName>
        <label>Checklist Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Count_Checklist__c</fullName>
        <description>Counts number of Risk Factors for the Deal</description>
        <label>Count of Risk Checklist Items</label>
        <summaryFilterItems>
            <field>GE_ES_Risk_Checklist_Item__c.GE_OG_Risk_Module__c</field>
            <operation>notEqual</operation>
            <value>Pricing</value>
        </summaryFilterItems>
        <summaryForeignKey>GE_ES_Risk_Checklist_Item__c.GE_OG_GS_DealMngt__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_EM_Count_CDCL__c</fullName>
        <label>Count For CD Approval Flag</label>
        <summaryFilterItems>
            <field>GE_ES_Risk_Checklist_Item__c.GE_ES_Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved, Approval not required, Submitted, Partially Approved</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>GE_ES_Risk_Checklist_Item__c.GE_OG_Risk_Module__c</field>
            <operation>notEqual</operation>
            <value>Pricing</value>
        </summaryFilterItems>
        <summaryForeignKey>GE_ES_Risk_Checklist_Item__c.GE_OG_GS_DealMngt__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_ES_100EODQrtr__c</fullName>
        <label>Is pipeline 100% convertible in EOD Qtr</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deal Managements</relationshipLabel>
        <relationshipName>Deal_Managements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_AmtExceeds__c</fullName>
        <label>Does oppty amount exceed threshold?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Answer_Required__c</fullName>
        <label>Answer Required</label>
        <summaryFilterItems>
            <field>GE_ES_Risk_Checklist_Item__c.GE_ES_Approval_Status__c</field>
            <operation>equals</operation>
            <value>Answer Required</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>GE_ES_Risk_Checklist_Item__c.GE_OG_Risk_Module__c</field>
            <operation>notEqual</operation>
            <value>Pricing</value>
        </summaryFilterItems>
        <summaryForeignKey>GE_ES_Risk_Checklist_Item__c.GE_OG_GS_DealMngt__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_ES_Begin_Date__c</fullName>
        <label>Esc Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Bid_Due_Date__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_ES_Bid_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bid Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_CashComplt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cash Flow Model Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_CashFlowReq__c</fullName>
        <formula>IF(ISPICKVAL(GE_ES_AmtExceeds__c,&quot;Yes&quot;)  &amp;&amp;( ISPICKVAL(GE_ES_TimMateral__c,&quot;No&quot;) &amp;&amp; ISPICKVAL( GE_ES_100EODQrtr__c ,&quot;No&quot;)), &quot;Yes&quot;,IF(ISPICKVAL(GE_ES_AmtExceeds__c,&quot;Yes&quot;)  &amp;&amp;( ISPICKVAL(GE_ES_TimMateral__c,&quot;&quot;) || ISPICKVAL( GE_ES_100EODQrtr__c ,&quot;&quot;)), &quot;Pending&quot;,&quot;No&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Cash Flow Required?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Comp_ES104__c</fullName>
        <formula>TEXT(GE_ES_Opportunity__r.GE_ES_Comp_ES104__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complete ES 104 Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Count_For_CD_Approval_Flag__c</fullName>
        <label>Count For CD Approval Flag</label>
        <summaryFilterItems>
            <field>GE_ES_Risk_Checklist_Item__c.GE_ES_Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved, Approval not required, Submitted</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>GE_ES_Risk_Checklist_Item__c.GE_OG_Risk_Module__c</field>
            <operation>notEqual</operation>
            <value>Pricing</value>
        </summaryFilterItems>
        <summaryForeignKey>GE_ES_Risk_Checklist_Item__c.GE_OG_GS_DealMngt__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_ES_Count_No_Of_Check_List_Items__c</fullName>
        <label>Count No Of Check List Items</label>
        <summaryFilterItems>
            <field>GE_ES_Risk_Checklist_Item__c.GE_OG_Risk_Module__c</field>
            <operation>notEqual</operation>
            <value>Pricing</value>
        </summaryFilterItems>
        <summaryForeignKey>GE_ES_Risk_Checklist_Item__c.GE_OG_GS_DealMngt__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_ES_Dispos_Date__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_ES_Disposition_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disposition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_ES104__c</fullName>
        <label>ES104</label>
        <picklist>
            <picklistValues>
                <fullName>Standard - English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina - Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia - English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus - Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil  - Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada  - English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada  - French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China  - Mandarin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia - Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic - Czech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France  - French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany  - German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary  - Hungarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India  - English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iraq - English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy  - Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan - Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea - Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico - Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland - Polish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia - Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saudi Arabia - English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain  - Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taiwan  - Mandarin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ukraine - Ukrainian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Venezuela - Spanish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_End_Date__c</fullName>
        <label>Esc End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Esc_Struct__c</fullName>
        <label>Esc Pricing Structure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_ICN__c</fullName>
        <label>ICN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Indicator__c</fullName>
        <label>Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_IndiciesBrk__c</fullName>
        <label>List Indicies/%Breakdown</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Infla_Prof__c</fullName>
        <label>Inflation/yr considered  in proforma/mod</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_IssuanceDt__c</fullName>
        <label>Issuance date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Margin__c</fullName>
        <formula>GE_ES_Opportunity__r.GEES_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_ES_Missing_Approvals__c</fullName>
        <label>Missing Approvals</label>
        <summaryFilterItems>
            <field>GE_ES_Risk_Checklist_Item__c.GE_ES_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Approved, Approval not required</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>GE_ES_Risk_Checklist_Item__c.GE_OG_Risk_Module__c</field>
            <operation>notEqual</operation>
            <value>Pricing</value>
        </summaryFilterItems>
        <summaryForeignKey>GE_ES_Risk_Checklist_Item__c.GE_OG_GS_DealMngt__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_ES_NPV_Indicator__c</fullName>
        <label>NPV Indicator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Off_SignDt__c</fullName>
        <label>GE Officer Signature date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opportunity_Legacy_Number__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_ES_Opportunity_Legacy_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Number Legacy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opportunity_Number__c</fullName>
        <label>Opportunity Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opportunity_Owner__c</fullName>
        <formula>GE_ES_Opportunity__r.Owner.FirstName  &amp; &apos; &apos; &amp; GE_ES_Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deal Management</relationshipLabel>
        <relationshipName>Deal_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_POdate__c</fullName>
        <label>Contract / PO date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Price_Type__c</fullName>
        <label>Price Esc Type</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indices w/Floor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indices w/out Floor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indices w/Ceiling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Rate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Price__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_ES_Pipeline_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_PricingMeth__c</fullName>
        <label>Pricing Methodology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Project__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+GE_ES_Opportunity__r.GE_ES_Project__c,  GE_ES_Opportunity__r.GE_ES_Project__r.Name , &apos;_top&apos;)</formula>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Proposal_Expiration_Date__c</fullName>
        <label>Proposal Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_PrpslGen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposal Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Qt_Number__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_ES_Quote_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_R1_Accepted_Date__c</fullName>
        <label>R1 Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_R1_Submitted_Date__c</fullName>
        <label>R1 Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_R2_Completed_Date__c</fullName>
        <label>R2 Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_R3_Completed_Date__c</fullName>
        <label>R3 Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_RateFloor__c</fullName>
        <label>Esc Rate or Floor&amp;Ceiling</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Regnal_App__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Approval Granted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Rejected_Date__c</fullName>
        <label>Rejected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Rejected__c</fullName>
        <label>Rejected</label>
        <summaryFilterItems>
            <field>GE_ES_Risk_Checklist_Item__c.GE_ES_Approval_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </summaryFilterItems>
        <summaryForeignKey>GE_ES_Risk_Checklist_Item__c.GE_OG_GS_DealMngt__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_ES_Risk_Path__c</fullName>
        <label>Risk Path</label>
        <picklist>
            <picklistValues>
                <fullName>Undetermined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conventional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conventional - Full Checklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Express Ineligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fast Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fast Track Undetermined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fast Track with no Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fast Track with Regional Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Express - Checklist Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Rqed_Appr__c</fullName>
        <label>Required Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Src_Assump__c</fullName>
        <label>Source of Assumption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Submitted__c</fullName>
        <label>Submitted</label>
        <summaryFilterItems>
            <field>GE_ES_Risk_Checklist_Item__c.GE_ES_Approval_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>GE_ES_Risk_Checklist_Item__c.GE_OG_Risk_Module__c</field>
            <operation>notEqual</operation>
            <value>Pricing</value>
        </summaryFilterItems>
        <summaryForeignKey>GE_ES_Risk_Checklist_Item__c.GE_OG_GS_DealMngt__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_ES_TimMateral__c</fullName>
        <label>Is Oppty Time &amp; Material</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Total_Mile__c</fullName>
        <label>Total Milestones</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_Ext_Opty_Id__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_Ext_Opty_Id__c</formula>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_Manage_Risk__c</fullName>
        <formula>HYPERLINK(&quot;/apex/GE_ES_TopicsPage?view=mine&amp;id=&quot;+Id, &quot;Manage Risk&quot;,&quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manage Risk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OGG_CM_TrgtPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CM% Target Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OGG_CM__c</fullName>
        <label>CM %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_OGG_End_UsrOn__c</fullName>
        <formula>IF( GE_ES_Account__r.GE_HQ_On_Hold__c,
IMAGE(&quot;resource/1315699578000/RiskTopicSignalsRed&quot; ,&quot;Red&quot;,30,30)&amp;&quot; - Red&quot;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Red Flag will indicate that the Account is on Hold</inlineHelpText>
        <label>End User On Hold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OGG_HUB__c</fullName>
        <label>HUB</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OGG_Prop_RevDt__c</fullName>
        <label>Proposal Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OGG_Prp_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposal Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OGG_Prp_Snt_Dt__c</fullName>
        <label>Proposal Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OGG_amt_500k__c</fullName>
        <formula>IF( GE_ES_Price__c &gt;=500000,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposal amount =&gt;500k USD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OGGcritical_factors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposal has critical risk factors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_ALPC_Risk_Checklist_Affirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AL/PC Risk Checklist Affirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_Bid_Sent_Date__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_OG_Bid_Sent_Date__c</formula>
        <label>Proposal Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_CPR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_Management_CPR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_Checklist_Version__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Checklist Version</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_DP_Act_ITO_Dt__c</fullName>
        <label>Actual ITO Handover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_DP_As_Bid_CM__c</fullName>
        <label>As Bid CM %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_OG_DP_Bid_Days__c</fullName>
        <label>Bid Validity in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_DP_Bid_Exp_Dt__c</fullName>
        <formula>GE_OG_DP_Bid_Sent_Date__c + GE_OG_DP_Bid_Days__c</formula>
        <label>Bid Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_DP_Bid_Generat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bid Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_DP_Bid_Number__c</fullName>
        <label>Bid Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_DP_Bid_Rev_Dt__c</fullName>
        <inlineHelpText>This is the date that the Revision Request is received.</inlineHelpText>
        <label>Bid Revision Request Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_DP_Bid_Rev_Num__c</fullName>
        <label>Bid Revision Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_DP_Bid_Sent_Date__c</fullName>
        <label>Bid Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_DP_Customer_PO__c</fullName>
        <label>Customer PO #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_DP_Extension_Agreed_Date__c</fullName>
        <label>Extension Agreed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_DP_GE_Region__c</fullName>
        <formula>TEXT( GE_ES_Opportunity__r.GE_OG_TM_Region__c )</formula>
        <label>GE O&amp;G Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_DP_ITO_HO_Dt__c</fullName>
        <label>Proposed ITO Handover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_DP_ITO_Req__c</fullName>
        <label>ITO Handover Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_DP_Inst_Cntry__c</fullName>
        <formula>TEXT(GE_ES_Opportunity__r.GE_OG_Install_Country__c )</formula>
        <label>Install Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_DP_Is_RRC_Need__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is RRC Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_DP_Ld_Pltfm__c</fullName>
        <formula>TEXT(GE_ES_Opportunity__r.GE_OG_DP_Ld_Pltfm__c )</formula>
        <label>Lead Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_DP_Order_Acc_Dt__c</fullName>
        <label>Order Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_DP_Ordr_Rec_Dt__c</fullName>
        <label>Order Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_DP_Quote_Revision_Number__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_OG_DP_Quote_Revision_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Revision Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_DP_Quote_Type__c</fullName>
        <formula>TEXT( GE_ES_Opportunity__r.GE_OG_TM_Quote_Type__c )</formula>
        <label>Quote Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_DP_R0_Date__c</fullName>
        <label>R0 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_DP_RRC_Date__c</fullName>
        <label>RRC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_DP_Scope__c</fullName>
        <label>Scope Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_DS_LOI_Receieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LOI Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_DS_Sales_Order__c</fullName>
        <label>Sales Order #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Deviation_Count__c</fullName>
        <description>This field stores the count of the number of checklist items of this record&apos;s opportunity that have deviation &gt;=2, and is used primarily for OG PII</description>
        <label>Deviation Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_GS_AllTCs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All T&amp;Cs Std/FA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_GS_CM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CM% Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_GS_CSType__c</fullName>
        <formula>TEXT(GE_ES_Opportunity__r.GE_OG_GS_CSType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_GS_Chk_Nm__c</fullName>
        <label>Checklist Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_GS_Date__c</fullName>
        <label>Proposal Generated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_GS_EndCoun__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_ES_End_User_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_GS_Enduser__c</fullName>
        <formula>GE_ES_Opportunity__r.End_User__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End user</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_GS_FrameAgr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Frame Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_GS_ProdSer__c</fullName>
        <formula>TEXT(GE_ES_Opportunity__r.GE_OG_GS_Prod_Srvc__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product/Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_GS_Prpsal__c</fullName>
        <formula>TEXT(GE_ES_Opportunity__r.GE_ES_Proposal_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposal Type</label>
        <type>Text</type>
    </fields>
</CustomObject>